--- a/styles/globals.css
+++ b/styles/globals.css
@@ -2,7 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
-*{
+* {
   /* background-color: rgb(15, 15, 15); */
 }
 
@@ -11,7 +11,6 @@ ol {
 }
 
 #form-file-upload {
-  height: 16rem;
   width: 28rem;
   max-width: 100%;
   text-align: center;
@@ -68,4 +67,12 @@ ol {
   right: 0px;
   bottom: 0px;
   left: 0px;
+}
+
+table,
+td,
+tr,
+th {
+  border: 1px solid black;
+  padding: 6px;
 }
